jugando con bootstrap

--- a/Ejercicio03/src/Components/inputDescription.css
+++ b/Ejercicio03/src/Components/inputDescription.css
@@ -1,4 +1,4 @@
-.formDetalle{
+/* .formDetalle{
     background: teal;
     border: 3px solid black;
     border-radius: 10px;
@@ -13,4 +13,4 @@
     width: 60%;
     height: 1.5rem;
     align-self: center;
-}
+} */
