--- a/Ejercicio03/src/Components/itemLista.css
+++ b/Ejercicio03/src/Components/itemLista.css
@@ -1,4 +1,4 @@
-li{
+/* li{
     margin: 10px;
     padding: 8px;
     background-color: cadetblue;
@@ -24,4 +24,4 @@ li input:checked + p{
 
 p{
     font-size: larger;
-}
+} */
