--- a/Ejercicio03/src/Components/itemLista.css
+++ b/Ejercicio03/src/Components/itemLista.css
@@ -1,7 +1,7 @@
 li{
-    margin: 10px;
+    margin: 1px;
     padding: 8px;
-    background-color: cadetblue;
+    background-color: teal;
     border: 3px solid black;
     border-radius: 12px;
     box-shadow: 10px;
@@ -24,4 +24,17 @@ li input:checked + p{
 
 p{
     font-size: larger;
+}
+
+.btnDelete{
+    background-color: #e43333f6;
+    border: 1px solid black;
+    height: 30px;
+    width: 30px;
+    align-self: center;
+    padding: 0px;
+}
+
+.trashCan{
+    height: 25px;
 }
